css/style.css
.top-bar {
  display: flex;
  align-items: center;
  justify-content: space-between;

  height: 75px;
  padding: 0 20px;
  color: rgb(241, 241, 241);
  background-color: rgb(5, 2, 29);
}

.header-left {
  display: flex;
  align-items: center;
}

.logo {
  display: block;
  height: 72px;
}

.logo-text {
  font-size: 1.2rem;
  font-weight: 600;
  letter-spacing: 0.5px;
  margin: 0;
  margin-left: -32px;
}

body {
  font-family: "Inter", sans-serif;
  font-size: 17px;
  margin: 0;
  background-color: rgb(37, 36, 49);
  background: linear-gradient(135deg, rgb(30, 29, 41), rgb(50, 48, 70));
}

#dashboard {
  display: grid;
  grid-template-columns: minmax(320px, 0.9fr) minmax(520px, 1.4fr);
  grid-template-rows: auto auto;
  gap: 12px;
  padding: 12px;
  max-width: 1200px;
  margin: 0 auto;
  box-sizing: border-box;
}

.card h3 {
  font-size: 1.45rem;
  margin-top: 0;
  margin-bottom: 18px;
}

.card {
  background-color: rgb(30, 29, 41);
  border-radius: 12px;
  border: 1px solid rgb(55, 54, 65);
  padding: 20px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
  color: rgb(241, 241, 241);
}

.card-content {
  max-width: 360px;
}

.child-profile {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.profile-actions {
  margin-top: 20px;
}

.child-profile p {
  line-height: 1.8;
  margin: 8px 0;
}

.growth-chart {
  min-height: 220px;
}

#growth-record-form {
  display: flex;
  flex-direction: column;
  gap: 10px;
  max-width: 360px;
  margin-top: 8px;
}

.record-form {
  display: flex;
  flex-direction: column;
}

.height-input-group {
  display: flex;
  gap: 10px;
}

.height-input-group input {
  flex: 1;
}

/* Modal */
.modal {
  display: none;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  width: 420px;
  background-color: rgb(30, 29, 41);
  border: 1px solid rgb(55, 54, 65);
  border-radius: 10px;
  padding: 24px;
  z-index: 1000;
}

/* Shown state */
.modal.show {
  display: block;
}

label {
  color: white;
}

.input-wrapper {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.input-wrapper label {
  font-weight: 600;
}

.input-wrapper input,
.input-wrapper select {
  width: 100%;
  padding: 10px;
  border-radius: 6px;
  border: 1px solid rgb(70, 70, 80);
  box-sizing: border-box;
}

.child-dropdown {
  display: none;
}

.child-dropdown.show {
  display: block;
}

button {
  border: none;
  border-radius: 10px;
  padding: 10px 16px;
  font-weight: 600;
  cursor: pointer;
  transition: 0.2s ease;
}

.add-btn,
.save-record-btn {
  background: linear-gradient(135deg, rgb(56, 101, 255), rgb(35, 83, 220));
  color: white;
}

